--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,12 @@
   --ff: 'Hanken Grotesk', sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-size: var(--fz);
   font-family: var(--ff);
