--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,8 @@
   --neutral-lavender: hsl(241, 100%, 89%);
   --neutral-gray-blue: hsl(224, 30%, 27%);
 
+  --score-color: hsl(240, 6%, 67%);
+
   --fz: 18px;
 
   --regular: 500;
