--- a/src/components/Result/Result.module.scss
+++ b/src/components/Result/Result.module.scss
@@ -17,8 +17,21 @@
     margin-top: 20px;
   }
 
+  @media screen and (min-width: 768px) {
+    flex: 1 1 100%;
+    border-radius: 40px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
 }
 
-.text{
+.text {
   font-size: 14px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+  }
 }
