--- a/src/components/SingleScore/SingleScore.module.scss
+++ b/src/components/SingleScore/SingleScore.module.scss
@@ -7,6 +7,11 @@
   align-items: center;
   gap: 10px;
   font-size: 16px;
+
+  @media screen and (min-width: 768px) {
+      margin-bottom: 10px;
+      padding: 15px;
+  }
 }
 
 .category {
