--- a/src/components/Summary/Summary.module.scss
+++ b/src/components/Summary/Summary.module.scss
@@ -8,4 +8,51 @@
   ul {
     list-style-type: none;
   }
+
+  @media screen and (min-width: 768px) {
+    flex: 1 1 100%;
+    padding: 40px 30px;
+  }
+}
+
+.button {
+  display: block;
+  width: 100%;
+  padding: 20px;
+  border-radius: 100px;
+  border: none;
+  outline: none;
+  background-color: hsl(224, 30%, 27%);
+  color: var(--neutral-white);
+  font-size: 20px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+
+  &:before {
+    background-image: linear-gradient(var(--bg-violet), var(--bg-blue));
+    content: "";
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    transition: opacity 0.3s;
+    z-index: -1;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    padding: 15px;
+    font-size: 14px;
+  }
+
+  &:hover {
+    &:before {
+      opacity: 1;
+    }
+  }
+
 }
