--- a/src/components/SingleScore/SingleScore.module.scss
+++ b/src/components/SingleScore/SingleScore.module.scss
@@ -11,18 +11,17 @@
   overflow: hidden;
 
   @media screen and (min-width: 768px) {
-      margin-bottom: 10px;
-      padding: 15px;
+    margin-bottom: 10px;
+    padding: 15px;
   }
 }
 
-.progress{
+.progress {
   position: absolute;
-
   height: 100%;
-  background: red;
   left: 0;
   top: 0;
+  transition: width 1s ease;
 }
 
 .category {
