added animation for numbers

--- a/src/components/SingleScore/SingleScore.module.scss
+++ b/src/components/SingleScore/SingleScore.module.scss
@@ -33,6 +33,8 @@
 .score {
   color: var(--score-color);
   font-weight: var(--semibold);
+  display: flex;
+  gap: 10px;
 
   span {
     color: var(--neutral-gray-blue);
